jumping fixed

--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ p {
 }
 
 .obstacle {
-  background: url("./img/Brick.jpg") center no-repeat;
+  background: url("./img/Brick7.jpg") center no-repeat;
   background-size: cover;
   border: 2px solid black;
   margin: 2px;
