--- a/styles/characterEvent.css
+++ b/styles/characterEvent.css
@@ -1,8 +1,8 @@
 .jumpAnimate {
-  animation: jump 1s linear ;
+  animation: jump 1s ease-in-out; /* زمان کوتاهتر برای حرکت نرم‌تر */
 }
 .smallJumpAnimate {
-  animation: smallJump 1s linear;
+  animation: smallJump 1s ease-in-out;
 }
 .fellAnimate {
   animation: wallAnime 0.5s linear;
@@ -36,15 +36,16 @@
 }
 @keyframes jump {
   0% {
-    bottom: 30px;
+    bottom: 30px; /* شروع از پایین */
   }
   50% {
-    bottom: 370px;
+    bottom: 400px; /* بالاترین نقطه پرش */
   }
   100% {
-    bottom: 30px;
+    bottom: 30px; /* برگشت به پایین */
   }
 }
+
 @keyframes smallJump {
   0% {
     bottom: 30px;
@@ -117,15 +118,18 @@
 }
 
 @media screen and (max-width: 760px) {
+  .jumpAnimate {
+    animation: jump 1s ease; /* زمان کوتاهتر برای حرکت نرم‌تر */
+  }
   @keyframes jump {
     0% {
-      bottom: 30px;
+      bottom: 30px; /* شروع از پایین */
     }
     50% {
-      bottom: 230px;
+      bottom: 230px; /* بالاترین نقطه پرش */
     }
     100% {
-      bottom: 30px;
+      bottom: 30px; /* برگشت به پایین */
     }
   }
   @keyframes smallJump {
@@ -173,7 +177,7 @@
     50% {
       height: 50px;
       width: 30px;
-      opacity: .5;
+      opacity: 0.5;
     }
     100% {
       height: 60px;
@@ -188,7 +192,7 @@
       width: 40px;
     }
     100% {
-      opacity: .5;
+      opacity: 0.5;
       height: 90px;
       width: 70px;
     }
